@@ -1,12 +1,14 @@
 package com.example.iplan.Service;
 
+import com.example.iplan.Domain.ScreenTime;
 import com.example.iplan.Domain.ScreenTimeOCRResult;
 import com.example.iplan.ExceptionHandler.CustomException;
 import com.example.iplan.Repository.GetScreenTimeOCRRepository;
 import com.example.iplan.Repository.SetScreenTimeRepository;
+import com.example.iplan.util.SimplePair;
 import com.google.cloud.vision.v1.*;
+import com.google.cloud.vision.v1.Image;
 import com.google.protobuf.ByteString;
-import com.google.type.DateTime;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -14,6 +16,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.multipart.MultipartFile;
 
+import java.awt.*;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -22,10 +25,11 @@ import java.nio.file.attribute.FileTime;
 import java.time.*;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
+import java.util.List;
 import java.util.concurrent.ExecutionException;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Service
 @RequiredArgsConstructor
@@ -35,77 +39,215 @@ public class ScreenTimeService {
 
     private final GetScreenTimeOCRRepository getScreenTimeOCRRepository;
 
-    public ResponseEntity<Map<String, Object>> uploadScreenTimeImage(@RequestParam("file") MultipartFile image, String user_id) throws IOException, ExecutionException, InterruptedException {
+    public ResponseEntity<Map<String, Object>> getScreenTimeGraph(String user_id, String targetDate) throws ExecutionException, InterruptedException{
         Map<String, Object> response = new HashMap<>();
 
-        // 1. 임시 파일로 저장
-        Path tempDir = Files.createTempDirectory("upload");
-        Path filePath = tempDir.resolve(Objects.requireNonNull(image.getOriginalFilename()));
-        Files.write(filePath, image.getBytes());
+        ScreenTimeOCRResult result = getScreenTimeOCRRepository.findByDate(user_id, targetDate);
+        System.out.println("그래프 타겟 날짜: "+ targetDate +", user_id: "+ user_id + ", result: "+ result);
 
-        // 2. 파일 생성 시간 확인(캡쳐 시간 확인)
-        BasicFileAttributes attr = Files.readAttributes(filePath, BasicFileAttributes.class);
-        // FileTime 객체로 생성 시간 가져오기
-        FileTime creationTime = attr.creationTime();
+        if(result == null){
+            response.put("success", false);
+            response.put("message", "해당 날짜의 업로드 된 사진이 없습니다.");
 
-        // FileTime을 LocalDateTime으로 변환
-        LocalDateTime creationDateTime = creationTime
-                .toInstant()
-                .atZone(ZoneId.systemDefault())
-                .toLocalDateTime();
+            System.out.println("result null이어서 false response 발송");
 
-        System.out.println("파일 생성 시간: "+ creationDateTime);
-
-        // 파일 생성 날짜가 오늘이고, 마감 시간을 넘겼을 경우에만 OCR 수행
-        if(IsInValidScreenShot(user_id, creationDateTime)){
-            // 3. Google Vision API를 사용하여 OCR 수행
-            List<String> extractedTexts = extractTextFromImage(filePath);
-
-            // 커스텀 필터를 통해 필요한 텍스트만 추출
-            Map<String, Object> filteredTexts = filterExtractedTexts(extractedTexts);
-
-            // 해당 날짜에 설정해둔 목표 시간에 달성했을 때, 결과물을 담아서 보낸다.
-            // 실패시 파일을 삭제하고, 상황에 맞게 오류 발송
-            if(!IsAchieveUsingTime(user_id, filteredTexts, response)){
-                LocalDate today = LocalDate.now();
-                DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
-                String todayToString = today.format(formatter);
-
-                ScreenTimeOCRResult result = ScreenTimeOCRResult.builder()
-                                .id(user_id)
-                                .date(todayToString)
-                                .result(filteredTexts)
-                                .isSuccess(true)
-                                .build();
-
-                getScreenTimeOCRRepository.save(result);
-                Files.delete(filePath);
-            }
-        }else{
-            Files.delete(filePath);
-            throw new CustomException("파일 생성 시간이 유효하지 않습니다.", HttpStatus.OK);
+            return new ResponseEntity<>(response, HttpStatus.NOT_FOUND);
         }
+        response.put("entity", result);
+        response.put("success", true);
 
-        Files.delete(filePath);
+        System.out.println("isSuccess?: " + result.isSuccess());
+
         return new ResponseEntity<>(response, HttpStatus.OK);
     }
 
-    private List<String> extractTextFromImage(Path imagePath) throws IOException{
-        ByteString imgBytes = ByteString.readFrom(Files.newInputStream(imagePath));
+    public ResponseEntity<Map<String, Object>> getScreenTime(String user_id, String targetDate) throws ExecutionException, InterruptedException {
+        Map<String, Object> response = new HashMap<>();
 
+        System.out.println("사용자 아이디: "+user_id+", 날짜: "+targetDate);
+
+        ScreenTime result = setScreenTimeRepository.findByDate(user_id, targetDate);
+
+        if(result == null){
+            response.put("success", false);
+            response.put("message", "해당 날짜의 설정된 스크린 타임이 없습니다.");
+
+            return new ResponseEntity<>(response, HttpStatus.NOT_FOUND);
+        }
+
+        String deadlineTime = result.getDeadLineTime();
+        String goalTime = result.getGoalTime();
+
+        response.put("date", targetDate);
+        response.put("deadLineTime", deadlineTime);
+        response.put("goalTime", goalTime);
+        response.put("success", true);
+
+        return new ResponseEntity<>(response, HttpStatus.OK);
+    }
+
+    public ResponseEntity<Map<String, Object>> uploadScreenTimeImage(@RequestParam("file") MultipartFile image, String user_id) throws IOException, ExecutionException, InterruptedException {
+        Map<String, Object> response = new HashMap<>();
+
+        if(user_id == null){
+            throw new CustomException("유저 상태를 확인해주세요.", HttpStatus.BAD_REQUEST);
+        }
+
+        try {
+            // 1. 임시 파일로 저장
+            String filename = image.getOriginalFilename();
+            if (filename == null || filename.isEmpty()) {
+                throw new CustomException("파일 이름이 비어 있습니다.", HttpStatus.BAD_REQUEST);
+            }
+
+            Path tempDir = Files.createTempDirectory("upload");
+            System.out.println("Temporary directory created: " + tempDir);
+
+            Path filePath = tempDir.resolve(filename);
+            System.out.println("File will be saved at: " + filePath);
+
+            // 파일 저장
+            try {
+                Files.write(filePath, image.getBytes());
+                System.out.println("File written successfully to: " + filePath);
+            } catch (IOException e) {
+                throw new CustomException("파일 저장 중 오류 발생", HttpStatus.INTERNAL_SERVER_ERROR);
+            }
+
+            // 2. 파일 생성 시간 확인(캡쳐 시간 확인)
+            BasicFileAttributes attr = Files.readAttributes(filePath, BasicFileAttributes.class);
+            FileTime creationTime = attr.creationTime();
+            LocalDateTime creationDateTime = creationTime
+                    .toInstant()
+                    .atZone(ZoneId.systemDefault())
+                    .toLocalDateTime();
+
+            System.out.println("파일 생성 시간: " + creationDateTime);
+
+            // 파일 생성 날짜가 오늘이고, 마감 시간을 넘겼을 경우에만 OCR 수행
+            if (IsInValidScreenShot(user_id, creationDateTime)) {
+                try {
+                    // 3. Google Vision API를 사용하여 OCR 수행
+                    List<String> extractedTexts = extractTextFromImage(filePath);
+
+                    // 커스텀 필터를 통해 필요한 텍스트만 추출
+                    Map<String, Object> filteredTexts = filterExtractedTexts(extractedTexts);
+
+                    // 해당 날짜에 설정해둔 목표 시간에 달성했을 때, 결과물을 담아서 보낸다.
+                    boolean screenTimeGoalResult = IsAchieveUsingTime(user_id, filteredTexts);
+
+                    // 현재 날짜
+                    LocalDate today = LocalDate.now();
+                    DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
+                    String todayToString = today.format(formatter);
+
+                    // OCR 결과 저장
+                    ScreenTimeOCRResult result = ScreenTimeOCRResult.builder()
+                            .user_id(user_id)
+                            .date(todayToString)
+                            .result(filteredTexts)
+                            .isSuccess(screenTimeGoalResult)
+                            .build();
+
+                    getScreenTimeOCRRepository.save(result);
+                    response.put("entity", filteredTexts);
+                    System.out.println("OCR 결과 저장 완료.");
+
+                } catch (Exception e) {
+                    DeleteFolderFiles(filePath);
+                    throw new CustomException(e.getMessage(), HttpStatus.BAD_REQUEST);
+                }
+            } else {
+                DeleteFolderFiles(filePath);
+                throw new CustomException("파일 생성 시간이 유효하지 않습니다.", HttpStatus.BAD_REQUEST);
+            }
+
+            // 마지막에 임시 파일 삭제
+            DeleteFolderFiles(filePath);
+            return new ResponseEntity<>(response, HttpStatus.OK);
+
+        } catch (Exception e) {
+            throw new CustomException("파일 업로드 오류 발생: " + e.getMessage(), HttpStatus.INTERNAL_SERVER_ERROR);
+        }
+    }
+
+    private void DeleteFolderFiles(Path filePath) throws IOException {
+        // 'try-with-resources' 구문을 사용하여 자동으로 Stream을 닫기
+        try (Stream<Path> paths = Files.walk(filePath.getParent())) {
+            // 역순으로 정렬하여 파일부터 삭제
+            paths.sorted(Comparator.reverseOrder())
+                    .forEach(path -> {
+                        try {
+                            Files.delete(path);
+                            System.out.println("삭제된 파일: " + path);
+                        } catch (IOException e) {
+                            throw new CustomException("파일 삭제 중 오류 발생", HttpStatus.BAD_REQUEST);
+                        }
+                    });
+            System.out.println("모든 파일 삭제 완료.");
+        }
+    }
+
+
+    private List<String> extractTextFromImage(Path imagePath) throws IOException {
+        ByteString imgBytes = ByteString.readFrom(Files.newInputStream(imagePath));
         Image img = Image.newBuilder().setContent(imgBytes).build();
         Feature feat = Feature.newBuilder().setType(Feature.Type.TEXT_DETECTION).build();
         AnnotateImageRequest request = AnnotateImageRequest.newBuilder().addFeatures(feat).setImage(img).build();
 
-        try(ImageAnnotatorClient client = ImageAnnotatorClient.create()){
-            AnnotateImageResponse response = client.batchAnnotateImages(java.util.Collections.singletonList(request)).getResponses(0);
-            if(response.hasError()){
+        try (ImageAnnotatorClient client = ImageAnnotatorClient.create()) {
+            AnnotateImageResponse response = client.batchAnnotateImages(
+                    java.util.Collections.singletonList(request)).getResponses(0);
+
+            if (response.hasError()) {
                 System.out.printf("Error: %s%n", response.getError().getMessage());
-                return List.of("사진 OCR중 오류 발생");
+                return List.of("사진 OCR 중 오류 발생");
             }
-            return response.getTextAnnotationsList().stream()
-                    .map(EntityAnnotation::getDescription)
-                    .collect(Collectors.toList());
+
+            List<EntityAnnotation> annotations = response.getTextAnnotationsList();
+            if (annotations.size() < 2) return List.of();
+
+            List<String> lines = Arrays.stream(annotations.get(0).getDescription().split("\n")).toList();
+
+            List<SimplePair<String, Point>> textWithPositions = new ArrayList<>();
+
+            int index = 1;
+            for (String line : lines) {
+                int j = index;
+                String sumText = annotations.get(j).getDescription();
+                List<Vertex> allVertices = new ArrayList<>(annotations.get(j).getBoundingPoly().getVerticesList());
+
+                while (j + 1 < annotations.size() && !line.replaceAll("\\s+", "").equals(sumText)) {
+                    j++;
+                    sumText += annotations.get(j).getDescription();
+                    allVertices.addAll(annotations.get(j).getBoundingPoly().getVerticesList());
+                }
+
+                int centerX = (int) allVertices.stream().mapToInt(Vertex::getX).average().orElse(0);
+                int centerY = (int) allVertices.stream().mapToInt(Vertex::getY).average().orElse(0);
+
+                textWithPositions.add(new SimplePair<>(line, new Point(centerX, centerY)));
+                index = j + 1;
+            }
+
+            textWithPositions.sort((p1, p2) -> {
+                Point pt1 = p1.getRight();
+                Point pt2 = p2.getRight();
+                if (Math.abs(pt1.y - pt2.y) > 20) return Integer.compare(pt1.y, pt2.y);
+                return Integer.compare(pt1.x, pt2.x);
+            });
+
+            List<String> sortedTexts = textWithPositions.stream()
+                    .map(SimplePair::getLeft)
+                    .toList();
+
+            System.out.println("=========== 최종 정렬된 텍스트 ===========");
+            sortedTexts.forEach(t -> System.out.println("text: " + t));
+            return sortedTexts;
+
+        } catch (Exception e) {
+            System.out.println("OCR 처리 중 예외 발생: " + (e.getMessage() != null ? e.getMessage() : "메시지 없음"));
+            throw new CustomException("OCR 처리 중 오류가 발생했습니다.", HttpStatus.BAD_REQUEST);
         }
     }
 
@@ -113,63 +255,85 @@ public class ScreenTimeService {
         Map<String, Object> result = new HashMap<>();
         List<Map<String, String>> categories = new ArrayList<>();
 
-        Pattern datePattern = Pattern.compile("(\\d+)월 (\\d+)일");
+        //Pattern datePattern = Pattern.compile("(\\d+)월 (\\d+)일");
         Pattern timePattern = Pattern.compile("(\\d+)시간 (\\d+)분");
+        Pattern minutesPattern = Pattern.compile("(\\d+)분");
 
         boolean mainTimeCaptured = false;
+        boolean isCategory = false;
         int timeCount = 0;
 
         for(String text : extractedTexts){
             // 날짜 추출
-            Matcher dateMatcher = datePattern.matcher(text);
+            //Matcher dateMatcher = datePattern.matcher(text);
             Matcher mainTimeMatcher = timePattern.matcher(text);
 
-            if(!result.containsKey("date") && dateMatcher.find()){
-                String date = DateFormatter(dateMatcher);
-                result.put("date", date);
+            if(!result.containsKey("date")){
+                result.put("date", LocalDate.now().toString());
+                continue;
             }
             // 메인 시간 추출
-            else if(!mainTimeCaptured && mainTimeMatcher.matches()){
+            if(!mainTimeCaptured && mainTimeMatcher.matches()){
                 String mainTime = TimeFormatter(mainTimeMatcher);
                 result.put("mainTime", mainTime);
 
                 mainTimeCaptured = true;
                 timeCount++;
+
+                continue;
+            }
+
+            if(text.equals("최다 사용") || text.equals("카테고리 보기") || text.equals("많이 사용한 앱")){
+                isCategory = true;
+                continue;
             }
 
             //카테고리 및 각 카테고리별 시간 추출
-            else if(mainTimeCaptured && timeCount > 0){
-                Matcher subtimeMatcher = timePattern.matcher(text);
-                if(subtimeMatcher.matches()){
-                    String subtime = TimeFormatter(subtimeMatcher);
-                    Map<String, String> categoryTime = categories.get(categories.size() - 1);
+            if(mainTimeCaptured && timeCount <= 3 && isCategory){
+                Matcher MatcherFullTime = timePattern.matcher(text);
+                Matcher MinMatcher = minutesPattern.matcher(text);
+
+                boolean fullTimeMatch = MatcherFullTime.matches();
+                boolean minMatch = MinMatcher.matches();
+                if(fullTimeMatch || minMatch){
+                    String subtime = fullTimeMatch ? TimeFormatter(MatcherFullTime) : TimeFormatter(MinMatcher);
+                    Map<String, String> categoryTime = categories.get(timeCount - 1);
                     categoryTime.put("time", subtime);
 
                     timeCount++;
                 }else{
-                    Map<String, String> category = new HashMap<>();
-                    category.put("name", text);
-                    categories.add(category);
+                    if (text.length() > 1 && text.matches(".*[가-힣a-zA-Z0-9].*")) {
+                        Map<String, String> category = new HashMap<>();
+                        category.put("name", text);
+                        categories.add(category);
+                    }
                 }
             }
-            if(timeCount >= 4) break;
         }
 
         result.put("categories", categories);
         return result;
     }
 
+
+
     private boolean IsInValidScreenShot(String user_id, LocalDateTime fileCreationDateTime) throws ExecutionException, InterruptedException {
         String fileCreationDate = fileCreationDateTime.toLocalDate().toString();
         String fileCreationTime = fileCreationDateTime.toLocalTime().format(DateTimeFormatter.ofPattern("HH:mm:ss"));
 
-        String deadLineTime = setScreenTimeRepository.findByDate(user_id, LocalDate.now().toString()).getDeadLineTime();
+        var screenTimeData = setScreenTimeRepository.findByDate(user_id, LocalDate.now().toString());
+        System.out.println(LocalDate.now());
+        if(screenTimeData == null){
+            throw new CustomException("스크린 타임 시간이 설정되지 않았습니다!", HttpStatus.BAD_REQUEST);
+        }
+
+        String deadLineTime = screenTimeData.getDeadLineTime();
         System.out.println("사진 올리는 마감 시간 : " + deadLineTime);
 
         return fileCreationDate.equals(LocalDate.now().toString()) && LocalTime.parse(fileCreationTime).isAfter(LocalTime.parse(deadLineTime));
     }
 
-    private boolean IsAchieveUsingTime(String user_id, Map<String, Object> filteredTexts, Map<String, Object> response) throws ExecutionException, InterruptedException {
+    private boolean IsAchieveUsingTime(String user_id, Map<String, Object> filteredTexts) throws ExecutionException, InterruptedException {
         LocalTime mainTime = LocalTime.parse(filteredTexts.get("mainTime").toString(), DateTimeFormatter.ofPattern("HH:mm"));
         Duration mainTimeDuration = Duration.between(LocalTime.MIDNIGHT, mainTime);
 
@@ -177,14 +341,7 @@ public class ScreenTimeService {
         LocalTime goalTime = LocalTime.parse(goalTimeString, DateTimeFormatter.ofPattern("HH:mm"));
         Duration goalTimeDuration = Duration.between(LocalTime.MIDNIGHT, goalTime);
 
-        if(mainTimeDuration.compareTo(goalTimeDuration) >= 0){
-            response.put("entity", filteredTexts);
-            response.put("success", true);
-            response.put("message", "목표 시간 달성에 성공하였습니다.");
-            return true;
-        }else{
-            throw new CustomException("목표 시간 달성에 실패하였습니다.", HttpStatus.OK);
-        }
+        return mainTimeDuration.compareTo(goalTimeDuration) < 0;
     }
 
     private String DateFormatter(Matcher dateMatcher){
@@ -198,12 +355,17 @@ public class ScreenTimeService {
         return parsedDate.format(DateTimeFormatter.ofPattern("yyyy-MM-dd"));
     }
 
-    private String TimeFormatter(Matcher timeMatcher){
-        int hours = Integer.parseInt(timeMatcher.group(1));
-        int minutes = Integer.parseInt(timeMatcher.group(2));
-        LocalTime parseTime = LocalTime.of(hours, minutes);
+    private String TimeFormatter(Matcher matcher) {
+        LocalTime parseTime = LocalTime.MIDNIGHT;
 
-        // HH:mm 형식으로 포맷
+        if (matcher.groupCount() == 2) {
+            int hours = Integer.parseInt(matcher.group(1));
+            int minutes = Integer.parseInt(matcher.group(2));
+            parseTime = LocalTime.of(hours, minutes);
+        } else if (matcher.groupCount() == 1) {
+            int minutes = Integer.parseInt(matcher.group(1));
+            parseTime = LocalTime.of(0, minutes);
+        }
         return parseTime.format(DateTimeFormatter.ofPattern("HH:mm"));
     }
 }
